--- a/simple-client-with-database/src/main/resources/log4j.properties
+++ b/simple-client-with-database/src/main/resources/log4j.properties
@@ -2,9 +2,9 @@
 # Loggers
 #
 # Catch-all
-log4j.rootLogger=INFO, ROOT
+log4j.rootLogger=DEBUG, ROOT
 # Repeat for each session...
-log4j.logger.EXEC.BANZAI=INFO, EXEC_BANZAI
+log4j.logger.EXEC.BANZAI=DEBUG, EXEC_BANZAI
 log4j.additivity.EXEC.BANZAI=false
 log4j.logger.EXEC.BANZAI.events=INFO, EXEC_BANZAI_EV
 log4j.additivity.EXEC.BANZAI.events=false
